[package]
name = "gm-program"
version = "0.1.0"
edition = "2021"

[lib]
name = "gm_program"
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.10.13"

[dev-dependencies]
solana-program-test = "1.10.13"
solana-sdk = "1.10.13"